board/licheepi/licheepi_nano: add basic user space packages
Signed-off-by: fdu <1050329+fdu@users.noreply.github.com>

--- a/configs/sipeed_licheepi_nano_defconfig
+++ b/configs/sipeed_licheepi_nano_defconfig
@@ -3,6 +3,7 @@ BR2_TARGET_GENERIC_HOSTNAME="licheepi-nano"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Buildroot for the LicheePi Nano"
 BR2_TARGET_GENERIC_GETTY_PORT="ttyS0"
 BR2_TARGET_GENERIC_GETTY_BAUDRATE_115200=y
+BR2_GENERATE_LOCALE="en_US.UTF-8"
 BR2_ROOTFS_OVERLAY="board/sipeed/licheepi_nano/rootfs_overlay"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="-c board/sipeed/licheepi_nano/genimage.cfg"
@@ -16,8 +17,11 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="allwinner/suniv-f1c100s-licheepi-nano"
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
+BR2_PACKAGE_MICROPYTHON=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_TMUX=y
+BR2_PACKAGE_NANO=y
 BR2_TARGET_ROOTFS_JFFS2=y
 BR2_TARGET_ROOTFS_JFFS2_FLASH_64=y
 BR2_TARGET_ROOTFS_JFFS2_NOCLEANMARKER=y
